# pytorch-template-aws

./: .env  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile_GPU  README.md  app.py  basic_setup.md  cdk.json  cdk.py  client.py  data.dvc  docker-compose.yaml  docker_compose_exec.sh  dvc.yaml  ec2_runner_setup.md  icons.py  install_docker.md  main.py  pyproject.toml  requirements.txt  run_client.sh  setup_aws_ci.md  todo.md
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml  deploy.yml  deploy_new.yml  hf_deploy.yaml  main_cd.yaml  test_deploy.yml
app/api/: chat.py
app/core/: celery_app.py  config.py
app/crud/: chat_crud.py
app/db/: database.py  models.py
app/schemas/: chat.py
app/tasks/: chat_task.py
configs/: infer.yaml  test.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_model_summary.yaml  rich_progress_bar.yaml
configs/data/: catdog.yaml
configs/experiment/: catdog_experiment.yaml  catdog_experiment_resnet.yaml
configs/logger/: aim.yaml  csv.yaml  default.yaml  mlflow.yaml  tensorboard.yaml
configs/model/: catdog_classifier.yaml  catdog_classifier_resnet.yaml
configs/paths/: catdog.yaml
configs/trainer/: default.yaml
logs/train/runs/2024-11-08_14-29-05/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2024-11-08_14-32-38/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2024-11-08_15-27-10/.hydra/: hydra.yaml
logs/train/runs/2024-11-08_15-29-07/.hydra/: hydra.yaml
logs/train/runs/2024-11-08_15-29-42/.hydra/: hydra.yaml
logs/train/runs/2024-11-08_15-30-22/.hydra/: config.yaml  hydra.yaml
logs/train/runs/2024-11-08_15-35-40/.hydra/: hydra.yaml
logs/train/runs/2024-11-08_15-35-57/.hydra/: hydra.yaml
logs/train/runs/2024-11-08_15-37-45/.hydra/: config.yaml  hydra.yaml
notebooks/: datamodule_lightning.ipynb  training_lightning.ipynb  training_lightning_tests.ipynb
src/: client.py  create_artifacts.py  hydra_test2.py  infer.py  litserve_api_test.py  litserve_benchmark.py  litserve_test_client.py  litserve_test_server.py  number_manipulation.py  server.py  test_infra.py  train.py  train_new.py  train_old.py  train_optuna_callbacks.py
src/checks/: hydra_test.py
src/datamodules/: catdog_datamodule.py
src/models/: catdog_model.py  catdog_model_resnet.py
src/utils/: aws_s3_services.py  logging_utils.py  multirun_op.py
tests/: test_db_connection.py
